--- a/doctorsmile/sass/media.sass
+++ b/doctorsmile/sass/media.sass
@@ -470,7 +470,7 @@
             img
                 max-width: 47vw
 
-    .beradcrumbs + *
+    .breadcrumbs + *
         margin-top: 0
         padding-top: 100px
 
@@ -579,7 +579,7 @@
         &__sliders
             padding: 10px
 
-    .beradcrumbs + *
+    .breadcrumbs + *
         margin-top: 0
 
     .about
