--- a/doctorsmile/sass/style.sass
+++ b/doctorsmile/sass/style.sass
@@ -25,9 +25,9 @@ span.uk-h1, span.uk-h2, span.uk-h3, span.uk-h4, span.uk-h5, h1, h2, h3, h4, h5
 .no-overflow
     overflow: visible !important
 
-.footer, .form, .header, .services
-    .uk-container
-        box-sizing: border-box !important
+// .footer, .more, .doctors, .form, .about, .portfolio, .header, .services
+.uk-container
+    box-sizing: border-box !important
 
 button
     outline: none
@@ -1029,6 +1029,7 @@ ul:not([class])
     &__side
         padding: 100px 0px
         max-width: 650px
+        padding-right: 30px
         p
             font-size: 18px
             color: #333
@@ -1049,8 +1050,12 @@ ul:not([class])
 .gallery
     margin: 50px 0px 120px
     &__photos
-        img + img
-            margin-left: 30px
+        flex-direction: row
+        justify-content: flex-start
+        & > *
+            margin-bottom: 25px
+            &:not(:last-child)
+                margin-right: 30px
 
 .form
     margin-top: 40px
@@ -1360,6 +1365,8 @@ ul:not([class])
             font-weight: bold
             color: #fff
             opacity: .4
+    &__wrap
+        box-sizing: border-box
 
 .text
     .uk-text
@@ -1524,7 +1531,7 @@ ul:not([class])
     &__name
         display: block
         font-size: 22px
-        
+             
 .review
     border-radius: 3px
     box-shadow: 0 5px 12px rgba(0,0,0,.15)
@@ -1621,11 +1628,6 @@ ul:not([class])
 
 .reviews
     padding: 100px 0px
-    &__slide
-        transition: opacity .3s ease-in-out .2s
-        &:not(.swiper-slide-visible)
-            opacity: 0
-            visibility: hidden
     &__pagination
         margin-top: 50px
         display: flex
@@ -1698,6 +1700,8 @@ ul:not([class])
             box-shadow: 0px 0px 15px rgba(20, 43, 61, 0.1), 0 0 0 2px $green
     &__slider
         position: relative
+        .swiper-wrapper
+            max-height: 800px
         &_thumbs
             .swiper-container
                 height: 100%
@@ -1804,7 +1808,12 @@ ul:not([class])
     background: #FFF
     box-shadow: 0px 0px 30px rgba(61, 61, 61, 0.1)
     border-radius: 30px
+    height: calc((100% - 30px) / 2)
     padding: 30px
+    transition: opacity .3s ease-in-out .2s
+    &:not(.swiper-slide-visible)
+        opacity: 0
+        visibility: hidden
     &__head
         display: flex
         align-items: center
@@ -1842,7 +1851,7 @@ ul:not([class])
         overflow: hidden
         border-radius: 10px
     & + &
-        margin-top: 30px
+        // margin-top: 30px
 
 .button
     flex: unset !important
