--- a/shiseido/sass/_media.sass
+++ b/shiseido/sass/_media.sass
@@ -119,6 +119,10 @@
             &-text
                 text-align: center
 
+    .shiseido-collection
+        &__names
+            display: none
+
 @media screen and ( max-width: 570px )
 
     .shiseido-collection
