--- a/foundation/sass/_media.sass
+++ b/foundation/sass/_media.sass
@@ -30,10 +30,15 @@
         &__wrap
             flex-direction: column
             align-items: stretch
+            max-width: 450px
+            margin-left: auto
+            margin-right: auto
         &__card
+            max-width: none
             &::before
                 display: none
         &__name
+            font-size: 12px
             strong br
                 display: none
 
@@ -86,6 +91,8 @@
     .shiseido-hero
         &__img
             &:first-child
+                object-fit: contain
+                height: auto
                 width: 100%
                 flex-shrink: 0
 
