--- a/foundation/sass/_style.sass
+++ b/foundation/sass/_style.sass
@@ -34,6 +34,8 @@ img
         padding: 30px 0px 25px
     &__logo
         max-width: 210px
+        height: auto
+        width: 100%
 
 .shiseido-hero
     display: flex
@@ -89,17 +91,22 @@ img
         position: absolute
         top: 80px
         right: 60px
+    &__img
+        object-fit: cover
+        flex-shrink: 0
     &__product-img
         margin-bottom: 20px
     &__card
         background-color: #f8f8f8
         width: 100%
+        max-width: 410px
         padding: 15px
         padding-right: 0px
         display: flex
         flex-direction: column
         align-items: center
         position: relative
+        box-shadow: 0 2px 10px 10px rgba(black, .05)
         &::before
             content: ''
             width: 10px
@@ -203,7 +210,7 @@ img
         max-width: 240px
         &:nth-child(3) &-img
             height: 300px
-            margin-top: 50px
+            margin-top: 65px
         &-step
             @include font('AvenirNext', 17px, 700, normal)
             display: inline-block
