--- a/shiseido/sass/_style.sass
+++ b/shiseido/sass/_style.sass
@@ -211,8 +211,11 @@ img
         object-fit: contain
     &__names
         position: absolute
-        left: 70px
-        top: 25px
+        left: 50%
+        top: 50%
+        transform: translate(calc( -30px - 50% ), -50%)
+        max-height: 94%
+        height: auto
 
 .shiseido-together
     margin-bottom: 75px
