--- a/ginza/sass/_style.sass
+++ b/ginza/sass/_style.sass
@@ -26,6 +26,7 @@ img, video
 .ginza-header
     display: flex
     justify-content: center
+    align-items: center
     padding: 40px
     &__img
         width: 100%
@@ -33,7 +34,6 @@ img, video
         height: auto
         flex-grow: 0
         flex-shrink: 0
-        object-fit: contain
         display: block
 
 .ginza-hero
