--- a/ginza/sass/_style.sass
+++ b/ginza/sass/_style.sass
@@ -22,6 +22,8 @@ img, video
     color: $text-white
     text-align: center
     text-transform: uppercase
+    position: relative
+    z-index: 3
 
 .ginza-header
     display: flex
